--- a/style.css
+++ b/style.css
@@ -513,9 +513,11 @@ position: initial;
     align-items: center;
     gap: 0.5rem;
     font-size: 0.875rem;
+     color: #bbbbbb;
 }
 .footer__breadcrumbs a.cart-count:hover {
     text-decoration: underline;
+   
 }
 
 .footer__middle {
@@ -523,6 +525,7 @@ position: initial;
     flex-direction: column;
     flex-wrap: wrap;
     text-align: center;
+    padding: 9.5rem;
     gap: 1rem;
     margin-bottom: 1rem;
     opacity: 0;
@@ -570,6 +573,7 @@ position: initial;
    text-align: center;
    flex-direction: column;
    align-items: center;
+   justify-content: space-around;
    gap: 1rem;
    opacity: 0;
    transform: translateY(20px);
